# api/docs/swagger.yaml
@@ -30,6 +30,13 @@ definitions:
           type: string
         type: array
     type: object
+  models.User:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    type: object
 host: localhost:8080
 info:
   contact:
@@ -112,6 +119,8 @@ paths:
           schema:
             $ref: '#/definitions/httputil.HTTPError'
       summary: Create a new recipe
+      tags:
+      - recipe
     put:
       consumes:
       - application/json
@@ -123,6 +132,12 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Recipe Info
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/models.Recipe'
       produces:
       - application/json
       responses:
@@ -147,6 +162,8 @@ paths:
           schema:
             $ref: '#/definitions/httputil.HTTPError'
       summary: Update a recipe
+      tags:
+      - recipe
   /recipes/{id}:
     delete:
       consumes:
@@ -183,6 +200,8 @@ paths:
           schema:
             $ref: '#/definitions/httputil.HTTPError'
       summary: Delete a recipe
+      tags:
+      - recipe
     get:
       consumes:
       - application/json
@@ -218,4 +237,51 @@ paths:
           schema:
             $ref: '#/definitions/httputil.HTTPError'
       summary: Get a recipe
+      tags:
+      - recipe
+  /signin:
+    post:
+      consumes:
+      - application/json
+      description: User sign in
+      parameters:
+      - description: User Info
+        in: body
+        name: message
+        required: true
+        schema:
+          $ref: '#/definitions/models.User'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          headers:
+            Token:
+              description: qwerty
+              type: string
+          schema:
+            $ref: '#/definitions/models.Recipe'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: User sign in
+      tags:
+      - auth
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
+  BasicAuth:
+    type: basic
 swagger: "2.0"
